# rossmann-toolbox

./: .gitignore  LICENSE  README.md  codecov.yml  example.ipynb  example_minimal.ipynb  example_v2.ipynb  pyproject.toml  requirements.txt  requirements_struct.txt
.ipynb_checkpoints/: README-checkpoint.md  example-checkpoint.ipynb  example_minimal-checkpoint.ipynb  example_v2-checkpoint.ipynb  struct_example_step_by_step-checkpoint.ipynb
docs/: index.md
examples/: example_minimal.ipynb  webserver_info.ipynb
rossmann_toolbox/: __init__.py  rtb.py
rossmann_toolbox/.ipynb_checkpoints/: rtb-checkpoint.py
rossmann_toolbox/models/: __init__.py  seqcoredetect.py  structmodel.py  structwrapper.py
rossmann_toolbox/utils/: __init__.py  dssp.py  foldx_parser.py  graph_feat_prep.py  graph_loader_opt.py  myfoldx.py  seqvec.py  solveX.py  struct_loader.py  struct_model_hparams.py  tools.py  utils.py
rossmann_toolbox/weights/: 0.pt  1.pt  2.pt  3.pt  4.pt  coredetector.pt
test-data/fasta/: core_benchmark.fas  full_length.fas
test-data/ref/: seq_full_length_core_dl.npy  seq_full_length_detect_eval.npy  seq_full_length_detect_eval_hhsearch.npy  seq_full_length_detect_eval_importance.npy  struct_full_length_detect_eval.npy
tests/: test_hhsearch.py  test_seq_predictions.py  test_struct_predictions.py
tests/data/: 1bw9_A.dssp  1bw9_A_Repair.fxout  1dli_A_Repair.fxout  AllAtoms_Disulfide_Optimized_1bw9_A_Repair_PN.fxout  AllAtoms_Electro_Optimized_1bw9_A_Repair_PN.fxout  AllAtoms_Hbonds_Optimized_1bw9_A_Repair_PN.fxout  Matrix_Distances_Optimized_1bw9_A_Repair_PN.fxout  (+17 more)
(+26 files in other folders)
