[tool.poetry]
name = "rossmann-toolbox"
version = "0.1.1"
description = "Prediction and re-engineering of the cofactor specificity of Rossmann-fold proteins"
authors = ["Kamil Kaminski <k.kaminski@cent.uw.edu.pl>", "Jan Ludwiczak <j.ludwiczak@cent.uw.edu.pl>", "Stanislaw Dunin-Horkawicz <s.dunin-horkawicz@cent.uw.edu.pl>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/labstructbioinf/rossmann-toolbox"
classifiers = ["Topic :: Scientific/Engineering :: Bio-Informatics", "License :: OSI Approved :: MIT License", "Intended Audience :: Science/Research", 
               "Programming Language :: Python :: 3 :: Only", "Topic :: Scientific/Engineering :: Artificial Intelligence"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.7.4"
atomium = "1.0.9"
biopython = "1.78"
captum = "0.3.1"
conditional = "^1.3"
dgl = "0.6.1"
pandas = "1.1.5"
csb = "^1.2.5"
seqvec = "0.4.1"
overrides = "^3.0"
greenlet = "<1"
torch = "^1.13"

[tool.poetry.dev-dependencies]
pytest = "^6"
pytest-cov = "^2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
